[tool.poetry]
name = "geowiki"
version = "0.1.0"
description = "Vector.AI Assignment"
authors = ["skanda <skandasneha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.76.0"
requests = "black"
black = "^22.3.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
pre-commit = "^2.19.0"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
async-sqlalchemy = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
